revised hw for derrique

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     <button type="button"><i class="fa fa-sliders"></i> All Filters</button>
-<div id="grid"></div>
+<div id="grid">
 </div>
 </body>
 <script src="main.js"></script>
